Migrate visualization services
